--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,20 @@
 
 - Font Weights 
 Default : 
+    400 
+Medium : 500 
+Semi-Bold  :  600 
+Bold:  700
 
 - Line Heights
 Default : 1
+small : 1.05
+medium : 1.2
+Paragraph Default : 1.6
+
+- letter spacing
+-0.5px
+h3 : 0.75px
 
 - SPACING SYSTEM (px)
 2/ 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
@@ -17,7 +28,9 @@ Default : 1
 --- 02 COLORS
 
 - Primary :  #e67e22
-- Tints : #fdf2e9 
+- Tints : 
+    #fdf2e9 
+    #fae5d3
 - Shades : #cf711f
 - Accents : 
 - Greys :
@@ -31,7 +44,7 @@ Default : 1
 --- 05 SHADOWS 
 
 --- 06 BORDER-RADIUS
-
+Default : 9px
 --- 07 WHITESPACE
 
 --- SPACING SYSTEM ( PX ) 
@@ -41,6 +54,10 @@ Default : 1
 /*
 Global Reset
 */
+/* ***************************** */
+/* GENERAL REUSABLE COMPONENTS */
+/* ***************************** */
+
 * {
     padding : 0;
     margin : 0;
@@ -57,35 +74,79 @@ body {
     font-weight: 400;
     color : #555;
 }
-.section-hero {
-    background-color : #fdf2e9;
-    padding : 9.6rem 0; 
-}
-.hero {
-    max-width: 130rem;
-    display: grid;
-    margin : 0 auto;
-    grid-template-columns: 1fr 1fr;
-    gap : 9.6rem;
-    align-items: center;
-}
-/*
-    Hero Left side 
-    */
-.heading-primary {
-    font-size : 5.2rem;
-    line-height: 1.05;
+
+.heading-primary,
+.heading-secondary,
+.heading-tertiary {
     color : #333;
     font-weight: 700;
     letter-spacing: -0.5px;
+}
+.heading-primary {
+
+    font-size : 5.2rem;
+    line-height: 1.05;
     margin-bottom : 3.2rem;
 }
 
-.hero-description {
-    font-size : 2rem;
-    line-height: 1.6;
-    margin-bottom:4.8rem
+.subheading {
+    display: block;
+    font-size : 1.6rem;
+    font-weight: 500;
+    color : #cf711f;
+    text-transform: uppercase;
+    margin-bottom: 1.6rem;
+    letter-spacing: 0.75px;
 }
+
+.heading-secondary {
+
+    font-size : 4.4rem;
+    line-height: 1.2;
+    margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+    font-size : 3.0rem;
+    line-height: 1.2;
+    margin-bottom: 3.2rem;
+}
+
+/* Support Section */
+.margin-right-sm {
+    margin-right: 1.6rem !important;
+}
+
+.container {
+    /* 1140 px Default most pages */
+    max-width: 120rem;
+    margin : 0 auto;
+    padding : 0 3.2rem;
+
+}
+
+.grid {
+    display : grid;
+    row-gap : 9.6rem;
+    column-gap : 6.4rem;
+}
+
+.grid--center-v {
+    align-items: center;
+}
+.grid--2-cols {
+    grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+    grid-template-columns: repeat(3, 1fr);
+}
+.grid--4-cols {
+    grid-template-columns: repeat(4, 1fr);
+}
+
+
+/* Support Section */
+
 
 .btn:link,
 .btn:visited {
@@ -125,6 +186,93 @@ body {
     box-shadow: inset 0 0 0 3px #fff;
 }
 
+/* ***************************** */
+/* HEADER */
+/* ***************************** */
+.header {
+    display : flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+    padding : 0 4.8rem;
+    /* MAke the header stick for scrolling */
+    height: 9.6rem;
+}
+
+.logo {
+    height: 2.2rem;
+}
+
+
+/* ***************************** */
+/* Navigation SECTION */
+/* ***************************** */
+
+.main-nav-list {
+    list-style: none;   
+    display : flex;
+    align-items: center;
+    gap : 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+    display: inline-block;
+    text-decoration: none;
+    color : #333;
+    font-weight: 500;
+    font-size : 1.8rem;
+    transition : all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+    color : #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.nav-cta:visited {
+    padding : 1.2rem 2.4rem;
+    border-radius : 9px;
+    background-color: #e67e22;
+    color : white;
+}
+
+
+.main-nav-link.nav-cta:link,
+.nav-cta:visited 
+{
+    background-color: #cf711f;
+
+}
+/* ***************************** */
+/* HERO SECTION */
+/* ***************************** */
+.section-hero {
+    background-color : #fdf2e9;
+    padding : 4.8rem 0 9.6rem 0; 
+}
+.hero {
+    max-width: 130rem;
+    display: grid;
+    margin : 0 auto;
+    padding  :0 3.2rem;
+    grid-template-columns: 1fr 1fr;
+    gap : 9.6rem;
+    align-items: center;
+}
+/*
+    Hero Left side 
+    */
+
+
+.hero-description {
+    font-size : 2rem;
+    line-height: 1.6;
+    margin-bottom:4.8rem
+}
+
+
 .delivered-meals {
     display: flex;
     align-items: center;
@@ -157,6 +305,65 @@ body {
     width : 100%;
 }
 
-.margin-right-sm {
-    margin-right: 1.6rem !important;
+
+/* ***************************** */
+/* HOW IT WORKS SECTION */
+/* ***************************** */
+
+.section-how {
+
+    padding : 9.6rem 0;
+   
+}
+
+.step-number {
+    font-size : 8.6rem;
+    font-weight : 600;
+    color : #888;
+    margin-bottom : 1.2rem;
+}
+
+.step-image-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position :relative;
+}
+.step-img{
+    width: 35%;
+}
+
+.step-description  {
+    font-size : 2rem;
+    line-height: 1.8;
+}
+
+.step-image-box:before {
+    content : "";
+    display: block;
+    width: 60%;
+    border-radius: 50%;
+    /* 60% of parent's width*/
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    position : absolute;
+    top:50%;
+    left : 50%;
+    z-index: -2;
+    transform : translate(-50%,-50%);
+}
+
+.step-image-box::after {
+    content : "";
+    display : block;
+    width : 45%;
+    padding-bottom: 45%;
+    background-color: #fae5d3;
+    position : absolute;
+    top:50%;
+    left:50%;
+    border-radius: 50%;
+    transform : translate(-50%,-50%);
+    z-index:-1;
+
 }
