--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ h3 : 0.75px
 
 --- 06 BORDER-RADIUS
 Default : 9px
+small : 11px;
 --- 07 WHITESPACE
 
 --- SPACING SYSTEM ( PX ) 
@@ -113,8 +114,34 @@ body {
 }
 
 /* Support Section */
+
+.link:link,
+.link:visited {
+    display: inline-block;
+    color :#e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    transition : all 0.5s;
+}
+
+.link:hover,
+.link:active
+{
+    color : #cf711f;
+    border-bottom: 1px solid transparent;
+}
+
 .margin-right-sm {
     margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+    margin-bottom : 4.8rem !important;
+}
+
+.center-text{
+    text-align: center;
 }
 
 .container {
@@ -307,6 +334,37 @@ body {
 
 
 /* ***************************** */
+/* FEATURED IT SECTION
+/* ***************************** */
+
+.section-featured {
+    padding :  4.8rem 0 3.2rem 0 ;
+}
+
+.heading-featured-in {
+    font-size : 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+    font-weight: 500;   
+    text-align: center;
+    margin-bottom : 2.4rem;
+    color : #999;
+}
+
+.logos img {
+    height: 3.2rem;
+    filter: brightness(0%);
+    opacity: 50%;
+
+}
+.logos {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+/* ***************************** */
 /* HOW IT WORKS SECTION */
 /* ***************************** */
 
@@ -366,4 +424,113 @@ body {
     transform : translate(-50%,-50%);
     z-index:-1;
 
+}
+
+/* ***************************** */
+/*  MEAL SECTION */
+/* ***************************** */
+
+.section-meals {
+    padding : 9.6rem 0;
+}
+
+.meal {
+    box-shadow : 0 2.4rem 4.8rem rgba(0,0,0,0.2);
+    border-radius: 11px;
+    overflow: hidden;
+    transition: all 0.25s;
+}
+
+.meal:hover {
+    transform : translate(0, -1.2rem);
+    box-shadow : 0 3.2rem 6.4rem rgba(0,0,0,0.4);
+    border-radius: 11px;
+}
+
+.meal-content {
+    padding : 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+.meal-tags {
+    margin-bottom  : 2rem;
+    display: flex;
+    gap : 0.4rem;
+}
+.tag {
+    display : inline-block;
+    padding : 0.4rem 0.8rem;
+    font-size : 1.2rem;
+    text-transform: uppercase;
+    color : #333;
+    border-radius: 100px;
+    font-weight: 600;
+}
+
+.tag--vegetarian {
+    background-color: #51cf66;
+}
+
+.tag--vegan {
+
+    background-color: #94d82d;
+}
+.tag--paleo {
+    background-color: #ffd43b;
+}
+.meal-title {
+    font-size : 2.4rem;
+    color : #333;
+    font-weight: 600;
+    margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+    list-style: none;
+    display : flex;
+    flex-direction: column;
+    gap : 2rem;
+}
+
+.meal-attribute {
+    font-size : 1.8rem;
+    display: flex;
+    align-items: center;
+    gap : 1.6rem;
+}
+.meal-icon {
+    color :#e67e22;
+    font-size : 2.4rem;
+}
+
+.meal-img {
+    width: 100%;
+}
+
+strong {
+    font-weight: 500;
+}
+
+
+.list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap : 1.6rem;
+}
+
+.list-icon {
+    width : 3rem;
+    height : 3rem;
+    color : #e67e22;
+}
+
+.list-item {
+    font-size : 1.8rem;
+    display : flex;
+    align-items: center;
+    gap : 1.6rem;
+}
+
+.all-recipes {
+    text-align: center;
+    font-size : 1.8rem;
 }
