--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,13 @@ h3 : 0.75px
 - Tints : 
     #fdf2e9 
     #fae5d3
+    #eb984e
 - Shades : #cf711f
 - Accents : 
 - Greys :
-    #6f6f6f ( Lightest Gray Allowed on )
+    #888
+    #767676 ( Lightest Grey allowed on #fff
+    #6f6f6f ( Lightest Gray Allowed on  #fdf2e9)
     #555, 
     #333,
 
@@ -157,6 +160,11 @@ body {
     display : grid;
     row-gap : 9.6rem;
     column-gap : 6.4rem;
+    
+}
+.grid:not(:last-child) 
+{
+    margin-bottom : 9.6rem;
 }
 
 .grid--center-v {
@@ -172,6 +180,9 @@ body {
     grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+    grid-template-columns : repeat(5, 1fr);
+}
 
 .list {
     list-style: none;
@@ -195,15 +206,19 @@ body {
 /* Support Section */
 
 
+
+.btn,
 .btn:link,
 .btn:visited {
     display: inline-block;
     font-size : 2rem;
-    color : white;
     text-decoration: none;
     padding : 1.6rem 3.2rem;
     border-radius: 8px;
     transition : 0.5s all;
+    font-family : inherit;
+    border : none;
+    cursor : pointer;
 }
 
 .btn--full:link,
@@ -211,6 +226,19 @@ body {
     background-color: #e67e22;
 
 }
+
+.btn--form {
+    align-self: end;
+    background-color : #45260a;
+    color : #fdf2e9;
+    padding : 1.2rem;
+}
+
+.btn--form:hover {
+    background-color: #fff;
+    color : #333;
+}
+
 
 .btn--outline:link,
 .btn--outline:visited {
@@ -231,6 +259,11 @@ body {
     
     /* Trick */
     box-shadow: inset 0 0 0 3px #fff;
+}
+
+*:focus{
+    outline: none;
+    box-shadow : 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* ***************************** */
@@ -603,9 +636,42 @@ strong {
 /* ***************************** */
 /*  PRICING SECTION */
 /* ***************************** */
+.section-pricing {
+    padding : 9.6rem 0;
+    
+}
 
 .pricing-plan {
-    padding : 9.6rem 0;
+    border-radius : 11px;
+    width : 75%;
+}
+.pricing-plan.--pricing-plan-starter
+{
+    border : 2px solid #fdf2e9;
+    justify-self: end;
+    padding : 4.6rem;
+}
+
+.pricing-plan--complete {
+
+    padding : 4.8rem;
+    background-color: #fdf2e9;
+    position : relative;
+    overflow: hidden;
+}
+
+.pricing-plan--complete::before {
+    content : "Best Value";
+    position:absolute;
+    top : 6%;
+    right : -18%; 
+    text-transform : uppercase;
+    font-size : 1.4rem;
+    font-weight: 700;
+    color : #333;
+    padding : 0.8rem 8rem;
+    transform : rotate(45deg);
+    background-color: #ffd43b;
 }
 
 .plan-header {
@@ -642,4 +708,205 @@ strong {
 .plan-sign-up {
     text-align: center;
     margin-top: 4.8rem;
+}
+
+/* ***************************** */
+/*  FEATURE SECTION */ 
+/* ***************************** */
+
+.plan-details {
+    font-size : 1.6rem;
+    line-height : 1.6;
+    text-align: center;
+}
+
+
+.feature-icon {
+    color : #e67e22;
+    height : 3.2rem;
+    width: 3.2rem;
+    background-color: #fae5d3;
+    border-radius: 50%;
+    padding : 1.6rem;
+
+    margin-bottom: 3.2rem;
+
+}
+
+.feature-title {
+    font-size : 2.4rem;
+    color : #333;
+    font-weight: 700;
+    margin-bottom: 1.6rem;
+    
+}
+
+.feature-text {
+
+    font-size : 1.8rem;
+    line-height: 1.8rem;
+}
+
+
+/* ***************************** */
+/* CTA SECTION */
+/* ***************************** */
+
+
+.section-cta {
+    padding : 4.8rem 0 12.8rem 0;
+}
+
+.cta {
+    display : grid;
+    grid-template-columns: 2fr 1fr;
+    background-color: #e67e22;
+    box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,0.15);
+    border-radius: 11px;
+    background-image :  linear-gradient(to right bottom ,#eb984e,#e67e22);
+    
+    overflow: hidden;
+}
+
+.cta-text-box {
+    color : #45260a;
+    padding : 4.8rem 6.4rem 6.4rem 6.4rem;
+}
+
+.cta .heading-secondary {
+    color : inherit;
+    margin-bottom : 3.2rem;
+}
+
+.cta-text {
+    font-size :  1.8rem;
+    line-height : 1.8;
+    margin-bottom : 4.8rem;
+}
+
+
+.cta-img-box {
+    background-image : linear-gradient(
+        to right bottom,
+        rgba(235, 151, 78, 0.35),
+        rgba(230, 125, 34, 0.35)
+    )
+    ,url("/img/eating.jpg");
+    background-size : cover;
+    background-position: center ;
+
+}
+
+.cta-form {
+    display : grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap : 2.4rem;
+}
+.cta-form label {
+    display : block;
+    font-size : 1.6rem;
+    font-weight: 500;
+    margin-bottom : 1.2rem;
+
+}
+
+.cta-form input,
+.cta-form select {
+    width : 100%;
+    padding: 1.2rem;
+    font-size : 1.8rem;
+    font-family: inherit;
+    color : inherit;
+    border : none;
+    background-color : #fdf2e9;
+    border-radius : 9px;
+    box-shadow : 0 1px 2px rgba(0,0,0,0.3);
+}
+
+.cta-form input::placeholder {
+    color : #aaa;
+}
+
+
+.cta *:focus{
+    outline: none;
+    box-shadow :  0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+/* ***************************** */
+/* FOOTER */
+/* ***************************** */
+.footer {
+    padding : 12.8rem 0;
+    border-top : 1px solid #eee;
+}
+
+.grid--footer {
+    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.logo-col {
+    display : flex;
+    flex-direction: column;
+
+}
+
+.footer-logo 
+{
+    display :block;
+    margin-bottom : 3.2rem;
+}
+.social-links 
+{
+    list-style: none;
+    display : flex;
+    gap : 2.4rem;
+}
+
+.social-icon {
+    height: 2.4rem;
+    width: 2.4rem;
+}
+
+.copyright {
+    font-size : 1.4rem;
+    line-height: 1.8;
+    color : #767676;
+    margin : auto 0 0 0  ;
+}
+.contacts {
+    font-style : normal;
+    font-size : 1.6rem;
+    line-height : 1.6;
+}
+.address {
+    margin-bottom : 2.4rem;
+}
+.footer-heading 
+{
+    font-size : 1.8rem;
+    font-weight: 500;
+    margin-bottom : 4rem;
+}
+
+.footer-nav {
+    list-style : none;
+    display: flex;
+    flex-direction: column;
+    gap : 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+    text-decoration: none;
+    font-size : 1.6rem;
+    color:#767676;
+    transition : all 0.2s;
+}
+
+.footer-link:hover,
+.footer-link:visited 
+{
+    color : #555;
 }
