--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ body {
     list-style: none;   
     display : flex;
     align-items: center;
-    gap : 3.2rem;
+    gap : 4.8rem;
 }
 
 .main-nav-link:link,
@@ -332,6 +332,7 @@ body {
     background-color : #fdf2e9;
     padding : 4.8rem 0 9.6rem 0; 
 }
+
 .hero {
     max-width: 130rem;
     display: grid;
@@ -909,4 +910,67 @@ strong {
 .footer-link:visited 
 {
     color : #555;
+}
+
+
+/* ***************************** */
+/* QUERIES */
+/* ***************************** */
+/**
+    84 * 16 = 1344 px, for small computer. use EM for media queries
+*/
+@media(max-width : 84em )
+{
+    .hero {
+        max-width: 120rem;
+    }
+
+    .heading-primary {
+        font-size : 4.4rem;
+    }
+
+    .gallery {
+    grid-template-columns: repeat(2,1fr);
+}
+}
+
+/* ***************************** */
+/* Below 1200 px (LAndscape tablet) */
+/* ***************************** */
+@media(max-width : 75em) 
+{
+    html {
+        /*
+            9 / 16
+        */
+        font-size : 56.25%;
+    }
+
+    .grid {
+        column-gap: 4.8rem;
+        row-gap : 6.4rem;
+    }
+
+    .heading-secondary {
+        font-size : 3.6rem;
+    }
+
+    .heading-tertiary {
+        font-size : 2.4rem;
+    }
+
+    .header {
+        padding :  0 3.2rem;
+    }
+
+    .main-nav-list {
+        gap : 3.2rem;
+    }
+    .hero {
+        gap : 4.8rem;
+    }
+
+    .testimonials-container {
+        padding : 9.6rem 3.2rem;
+    }
 }
