--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ Global Reset
 html {
     font-size: 62.5%;
     overflow-x: hidden;
+    /*
+        Does not work for safari & Edge  Scroll-behaviour
+    */
+    scroll-behavior: smooth;
 }
 
 body {
@@ -222,6 +226,7 @@ body {
     text-decoration: none;
     padding: 1.6rem 3.2rem;
     border-radius: 8px;
+    color:white;
     transition: 0.5s all;
     font-family: inherit;
     border: none;
@@ -342,6 +347,7 @@ body {
     background: none;
     cursor: pointer;
     display: none;
+    z-index : 1000;
 }
 
 .icon-mobile-nav {
@@ -352,6 +358,25 @@ body {
 
 .icon-mobile-nav[name="close-outline"] {
     display: none;
+}
+
+/* Sticky Navigation*/
+.sticky .header {
+    position: fixed;
+    top : 0;
+    bottom : 0;
+    width: 100%;
+    height  : 8rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    background-color: rgba(255,255,255,0.95);
+    transition : all 0.2s;
+    z-index: 1000;
+    box-shadow : 0 1.2rem 3.2rem rgba(0,0,0, 0.1)
+}
+
+.sticky .section-hero {
+    margin-top : 9.6rem;
 }
 
 /* ***************************** */
@@ -1086,7 +1111,9 @@ strong {
     }
 
     .main-nav {
-        background-color: rgba(255, 255, 255, 0.95);
+        background-color: rgba(255, 255, 255, 0.55);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         position: absolute;
         top: 0;
         left: 0;
